--- a/src/index.css
+++ b/src/index.css
@@ -1,386 +1,439 @@
+ 
 * {
-  padding: 0;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
+  
+  .link-button {
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: #303944;
+  }
+  
+  .link-button p {
+    font-size: small;
+  }
+  
+  .link-div {
+    height: 70px;
+    width: 25%;
+  }
+  
+  .percentage-section {
+    width: 95px;
+    border: 5px solid rgb(255, 255, 255);
+    height: 90px;
+    border-radius: 50%;
+    margin: auto;
+    font-size: x-large;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #ffffff;
+  }
+  
+  .title-section {
+    text-align: center;
+    font-size: small;
+    color: lightgray;
+    padding-top: 5px;
+  }
+  
+  .main-section {
+    width: 45%;
+    height: 100px;
+    position: relative;
+    margin: 11px 11px;
+  }
+  
+  i {
+    cursor: pointer;
+  }
+  
+  .summary-section {
+    overflow-x: auto;
+    width: 477px;
+  }
+  
+  .summary-alignment {
+    display: flex;
+    align-items: center;
+  }
+  
+  .summary-section::-webkit-scrollbar {
+    width: 0;
+  }
+  
+  .card-stuff {
+    min-width: 167px;
+  }
+  
+  .activities-main {
+    background-color: #f3f4f6;
+  }
+  
+  .lower-section {
+    position: absolute;
+    bottom: 0;
+  }
+  
+  .links-info {
+    font-size: small;
+    text-decoration: none;
+    color: lightgray;
+    font-weight: bold;
+  }
+  
+  .image-det {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .home-section {
+    height: 100vh;
+    position: relative;
+    margin-top: 60px;
+  }
+  
+  .footer {
+    background-color: yellow;
+    display: flex;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+  }
+  
+  .image-section {
+    height: 100%;
+    background-color: #f3f4f6;
+  }
+  
+  .trash-section {
+    color: lightgray;
+  }
+  
+  .trash-section:hover {
+    color: deepskyblue;
+  }
+  
+  .activity-title {
+    font-size: small;
+    font-weight: bold;
+  }
+  
+  .menu-section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 100vh;
+    z-index: 1;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .menu-mask {
+    background-color: #000;
+    opacity: 0.6;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+  }
+  
+  .itag-section {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+  }
+  
+  .header-section {
+    flex: 7;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .display-positive,
+  .display-negative {
+    width: 50px;
+    border: 5px solid lightgray;
+    height: 50px;
+    border-radius: 50%;
+    margin: auto;
+    font-size: small;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: #738497;
+  }
+  
+  .random {
+    align-items: center;
+    width: 95%;
+    margin: auto;
+  }
+  
+  .clock-border {
+    border: 1px solid #f3f4f6;
+    height: 17em;
+    display: flex;
+    width: 17em;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
+  
+  .start-watch,
+  .stop-watch {
+    border: none;
+    padding: 15px 50px;
+    color: gray;
+  }
+  
+  .stop-watch {
+    background-color: #97e494;
+  }
+  
+  .activity-header {
+    padding: 20px;
+    text-align: center;
+    background-color: #fff;
+  }
+  
+  .measure-section {
+    background-color: #f3f4f6;
+    height: 100vh;
+    margin-top: 60px;
+  }
+  
+  .lower-section-button {
+    width: 60%;
+    margin: auto;
+    justify-content: center;
+  }
+  
+  .login-section {
+    margin-left: 25em;
+    margin-top: 5rem;
+  }
+  
+  .nav-bar-section {
+    position: fixed;
+    background-color: #42b5e8;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+    padding: 0 20px;
+  }
+  
+  .measurement-top {
+    margin-top: 60px;
+  }
+  
+  .date-value {
+    display: flex;
+    flex-direction: column;
+    color: #597085;
+    justify-content: flex-end;
+  }
+  
+  .date-value h6 {
+    font-weight: bold;
+  }
+  
+  .date-value span {
+    font-size: small;
+    font-weight: bold;
+  }
+  
+  .btn-plus {
+    border: none;
+    background-color: #42b5e8;
+    padding: 5px 10px;
+    font-weight: bold;
+    margin-bottom: 3px;
+    margin-left: auto;
+  }
+  
+  .create-activity {
+    margin-top: 60px;
+    height: 100vh;
+    background-color: #f3f4f6;
+  }
+  
+  .activity-heading {
+    padding: 10px;
+    text-align: center;
+    color: #ffffff;
+    width: 100%;
+    background-color: #fff;
+  }
+  
+  .image-upload {
+    background-color: #fff;
+  }
+  
+  .left-image,
+  .right-image {
+    background-color: #ffffff;
+    margin: 0 5px;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    font-size: 150px;
+    color: #d1d2d6;
+  }
+  
+  .input-control {
+    width: 93%;
+    border: none;
+    height: 35px;
+    margin-left: 1em;
+    padding: 10px;
+  }
+  
+  .btn-control {
+    padding: 10px 25px;
+    background-color: #97e494;
+    border: none;
+    color: #fff;
+    margin-left: 1em;
+  }
+  
+  .file-section {
+    background-color: #ffffff;
+    padding: 10px;
+  }
+  
+  .information-section {
+    margin-top: 60px;
+    background-color: #f3f4f6;
+    padding: 20px;
+    height: 100vh;
+  }
+  
+  .copyright {
+    font-size: medium;
+    margin-bottom: 20px;
+    font-family: 'Nunito Sans', sans-serif;
+    background-color: #fff;
+  }
+  
+  .date-section {
+    border-bottom: 2px solid #f3f4f6;
+    color: #a3a6ad;
+  }
+  
+  .activity-text small {
+    font-weight: bold;
+  }
+  
+  .activity-inner {
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .first-div {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .second-div {
+    flex: 4;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .third-div {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .footer-img {
+    width: 30%;
+    font-size: 25px;
+  }
+  
+  .add-stack {
+    font-size: 1.5rem;
+    color: #f7f7f7;
+  }
+  
+  .card {
+    margin-left: 25em;
+    margin-top: 5rem;
+  }
+  
+  form {
+    width: 100%;
+  }
+
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    height: 60px;
+    top: unset;
+  }
+
+  .link-div {
+    height: 70px;
+    width: 25%;
+  }
+
+  .link-button {
+    border: none;
+    width: 100%;
+    height: 100%;
+    background-color: #303944;
+  }
+
+  .main-section {
+    height: 100px;
+  }
+
+  .date-section {
+    margin-left: 0;
+  }
+
+  .activities-main {
+    margin-left: 0 !important;
+    width: 100%;
+  }
+
+  .summary-display-section,
+  .create-activity-inner,
+  .information-section,
+  .measurement-outer-section {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .activity-title {
+    font-size: small;
+    font-weight: bold;
+  }
 }
 
-.link-button {
-  border: none;
-  width: 100%;
-  height: 100%;
-  background-color: #303944;
-}
-
-.link-button p {
-  font-size: small;
-}
-
-.link-div {
-  height: 70px;
-  width: 25%;
-}
-
-.percentage-section {
-  width: 95px;
-  border: 5px solid lightgray;
-  height: 90px;
-  border-radius: 50%;
-  margin: auto;
-  font-size: x-large;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  color: #738497;
-}
-
-.title-section {
-  text-align: center;
-  font-size: small;
-  color: lightgray;
-  padding-top: 5px;
-}
-
-.main-section {
-  width: 45%;
-  height: 100px;
-  position: relative;
-  margin: 11px 11px;
-}
-
-i {
-  cursor: pointer;
-}
-
-.summary-section {
-  overflow-x: auto;
-  width: 477px;
-}
-
-.summary-alignment {
-  display: flex;
-  align-items: center;
-}
-
-.summary-section::-webkit-scrollbar {
-  width: 0;
-}
-
-.card-stuff {
-  min-width: 167px;
-}
-
-.activities-main {
-  background-color: #f3f4f6;
-}
-
-.lower-section {
-  position: absolute;
-  bottom: 0;
-}
-
-.links-info {
-  font-size: small;
-  text-decoration: none;
-  color: lightgray;
-  font-weight: bold;
-}
-
-.image-det {
-  width: 100%;
-  height: 100%;
-}
-
-.home-section {
-  height: 100vh;
-  position: relative;
-  margin-top: 60px;
-}
-
-.footer {
-  background-color: yellow;
-  display: flex;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-}
-
-.image-section {
-  height: 100%;
-  background-color: #f3f4f6;
-}
-
-.trash-section {
-  color: lightgray;
-}
-
-.trash-section:hover {
-  color: deepskyblue;
-}
-
-.activity-title {
-  font-size: small;
-  font-weight: bold;
-}
-
-.menu-section {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 80%;
-  height: 100vh;
-  z-index: 1;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu-mask {
-  background-color: #000;
-  opacity: 0.6;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 1;
-}
-
-.itag-section {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-}
-
-.header-section {
-  flex: 7;
-  display: flex;
-  justify-content: center;
-}
-
-.display-positive,
-.display-negative {
-  width: 50px;
-  border: 5px solid lightgray;
-  height: 50px;
-  border-radius: 50%;
-  margin: auto;
-  font-size: small;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  color: #738497;
-}
-
-.random {
-  align-items: center;
-  width: 95%;
-  margin: auto;
-}
-
-.clock-border {
-  border: 1px solid #f3f4f6;
-  height: 17em;
-  display: flex;
-  width: 17em;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-}
-
-.start-watch,
-.stop-watch {
-  border: none;
-  padding: 15px 50px;
-  color: gray;
-}
-
-.stop-watch {
-  background-color: #97e494;
-}
-
-.activity-header {
-  padding: 20px;
-  text-align: center;
-  background-color: #fff;
-}
-
-.measure-section {
-  background-color: #f3f4f6;
-  height: 100vh;
-  margin-top: 60px;
-}
-
-.lower-section-button {
-  width: 60%;
-  margin: auto;
-  justify-content: center;
-}
-
-.login-section {
-  margin-left: 25em;
-  margin-top: 5rem;
-}
-
-.nav-bar-section {
-  position: fixed;
-  background-color: #42b5e8;
-  width: 100%;
-  z-index: 1;
-  top: 0;
-  padding: 0 20px;
-}
-
-.measurement-top {
-  margin-top: 60px;
-}
-
-.date-value {
-  display: flex;
-  flex-direction: column;
-  color: #597085;
-  justify-content: flex-end;
-}
-
-.date-value h6 {
-  font-weight: bold;
-}
-
-.date-value span {
-  font-size: small;
-  font-weight: bold;
-}
-
-.btn-plus {
-  border: none;
-  background-color: #42b5e8;
-  padding: 5px 10px;
-  font-weight: bold;
-  margin-bottom: 3px;
-  margin-left: auto;
-}
-
-.create-activity {
-  margin-top: 60px;
-  height: 100vh;
-  background-color: #f3f4f6;
-}
-
-.activity-heading {
-  padding: 10px;
-  text-align: center;
-  color: #afb0b2;
-  width: 100%;
-  background-color: #fff;
-}
-
-.image-upload {
-  background-color: #fff;
-}
-
-.left-image,
-.right-image {
-  background-color: #a3a6ad;
-  margin: 0 5px;
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-  font-size: 150px;
-  color: #d1d2d6;
-}
-
-.input-control {
-  width: 93%;
-  border: none;
-  height: 35px;
-  margin-left: 1em;
-  padding: 10px;
-}
-
-.btn-control {
-  padding: 10px 25px;
-  background-color: #97e494;
-  border: none;
-  color: #fff;
-  margin-left: 1em;
-}
-
-.file-section {
-  background-color: #a3a6ad;
-  padding: 10px;
-}
-
-.information-section {
-  margin-top: 60px;
-  background-color: #f3f4f6;
-  padding: 20px;
-  height: 100vh;
-}
-
-.copyright {
-  font-size: medium;
-  margin-bottom: 20px;
-  font-family: 'Nunito Sans', sans-serif;
-  background-color: #fff;
-}
-
-.date-section {
-  border-bottom: 2px solid #f3f4f6;
-  color: #a3a6ad;
-}
-
-.activity-text small {
-  font-weight: bold;
-}
-
-.activity-inner {
-  font-size: 20px;
-  font-weight: bold;
-  flex: 2;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.first-div {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.second-div {
-  flex: 4;
-  display: flex;
-  justify-content: center;
-}
-
-.third-div {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.footer-img {
-  width: 30%;
-}
-
-.add-stack {
-  font-size: 1.5rem;
-  color: #313944;
-}
-
-.card {
-  margin-left: 25em;
-  margin-top: 5rem;
-}
-
-form {
-  width: 100%;
-}
